Fix alignment of twoline readonly table rows
Also removed an unused template tag.

Patch by: Sverre Rabbelier

--HG--
extra : convert_revision : svn%3A32761e7d-7263-4528-b7be-7235b26367ec/trunk%402165

--- a/app/soc/content/css/soc-090120.css
+++ b/app/soc/content/css/soc-090120.css
@@ -169,6 +169,13 @@ td.formfieldlabel {
 td.twolineformfieldlabel {
   font-weight: bold;
   font-size: small;
+  text-align: left;
+}
+
+
+td.twolineformfieldlabel {
+  font-weight: bold;
+  font-size: small;
 }
 
 td.formfieldvalue {
